<resources>
    <string name="app_name">Send Meal</string>
    <string name="nombre">Nombre</string>
    <string name="contrase_a">Contraseña</string>
    <string name="repetir_contrase_a">Repetir contraseña</string>
    <string name="e_mail">E-mail</string>
    <string name="tipo_de_tarjeta">Tipo de tarjeta:</string>
    <string name="d_bito">Débito</string>
    <string name="cr_dito">Crédito</string>
    <string name="n_mero_de_tarjeta">Número de tarjeta</string>
    <string name="ccv">CCV</string>
    <string name="fecha_de_vencimiento">Fecha de vencimiento:</string>
    <string name="mes">Mes</string>
    <string name="a_o">Año</string>
    <string name="cbu">CBU</string>
    <string name="alias_cbu">Alias CBU</string>
    <string name="realizar_carga_inicial">¿Realizar carga inicial?</string>
    <string name="acepto_los_t_rminos_y_condiciones">Acepto los términos y condiciones</string>
    <string name="registrar">REGISTRAR</string>
    <string name="carga_inicial_0">Carga inicial: $0</string>
    <string name="bienvenidos">BIENVENIDOS</string>
    <string name="registrarme">Registrarme</string>
    <string name="crear_item">Crear item</string>
    <string name="lista_item">Lista item</string>
    <string name="atr_s">Atrás</string>
    <string name="descripci_n">Descripción</string>
    <string name="t_tulo">Título</string>
    <string name="calor_as">Calorías</string>
    <string name="precio">Precio</string>
    <string name="guardar">GUARDAR</string>
    <string name="backbutton" />
    <string name="nuevo_pedido">Nuevo pedido</string>
    <string name="ingrese_los_datos_de_su_nuevo_pedido">¡Ingrese los datos de su nuevo pedido!</string>
    <string name="ingrese_su_email">Ingrese su email</string>
    <string name="ingrese_la_direcci_n_de_env_o">Ingrese la dirección de envío</string>
    <string name="agregar_plato">Agregar plato</string>
    <string name="tipo_de_entrega">Tipo de entrega</string>
    <string name="env_o">Envío</string>
    <string name="take_away">Take Away</string>
    <string name="confirmar">Confirmar</string>
    <string name="subtotal">Subtotal</string>
    <string name="foto_del_plato_tomar">Tomar una foto del plato</string>
    <string name="seleccionar_foto_de_mi_galeria">Seleccionar una foto de mi Galeria</string>
    <string name="imagen_del_plato">Foto del plato</string>

</resources>