<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/contrasenia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/contrasenia2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/repetir_contrase_a"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/tipo_tarjeta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tipo_de_tarjeta" />

    <RadioGroup
        android:id="@+id/rg1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="201dp"
            android:layout_height="wrap_content"
            android:text="@string/d_bito" />

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:text="@string/cr_dito" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/nrotarjeta"
            android:layout_width="296dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/n_mero_de_tarjeta"
            android:inputType="number" />

        <EditText
            android:id="@+id/ccv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/ccv"
            android:inputType="number" />
    </LinearLayout>

    <TextView
        android:id="@+id/fecha_venc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fecha_de_vencimiento" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/sMes"
            android:layout_width="203dp"
            android:layout_height="wrap_content"
            />

        <Spinner
            android:id="@+id/sAnio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

    </LinearLayout>

    <EditText
        android:id="@+id/cbu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/cbu"
        android:inputType="number" />

    <EditText
        android:id="@+id/cbualias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/alias_cbu"
        android:inputType="textPersonName" />

    <Switch
        android:id="@+id/carga_inicial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/realizar_carga_inicial"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0sp"
        android:text="@string/carga_inicial_0"
        android:textAlignment="center"
        android:textSize="18sp" />

    <SeekBar
        android:id="@+id/barra"
        style="@android:style/Widget.Material.SeekBar"
        android:layout_width="match_parent"
        android:layout_height="35dp" />

    <CheckBox
        android:id="@+id/term_cond"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/acepto_los_t_rminos_y_condiciones" />

    <Button
        android:id="@+id/registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrar" />

</LinearLayout>