<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CrearItemActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary" />

    <EditText
        android:id="@+id/tituloPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/t_tulo"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/descripcion"
        android:layout_width="match_parent"
        android:layout_height="113dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/descripci_n"
        android:inputType="textMultiLine"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/precio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/precio"
            android:inputType="numberDecimal"
            android:autofillHints="" />

        <EditText
            android:id="@+id/calorias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/calor_as"
            android:inputType="number"
            android:autofillHints="" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvImagenPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imagen_del_plato"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/ivFoto"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerInside"
        app:srcCompat="@android:drawable/ic_menu_camera"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btFotoPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/foto_del_plato_tomar" />

    <Button
        android:id="@+id/btSeleccionarFoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seleccionar_foto_de_mi_galeria" />

    <Button
        android:id="@+id/guardarPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar" />

</LinearLayout>