<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PedidoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:id="@+id/textoInical"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:text="@string/ingrese_los_datos_de_su_nuevo_pedido"
        android:textSize="20sp"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/emailUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ingrese_su_email"
        android:inputType="textEmailAddress"
        android:autofillHints="" />

    <EditText
        android:id="@+id/direccionUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ingrese_la_direcci_n_de_env_o"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <TextView
        android:id="@+id/rgEntrega"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tipo_de_entrega"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/entrega"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/envio"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:text="@string/env_o" />

        <RadioButton
            android:id="@+id/takeAway"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/take_away" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerPedido"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/etSubtotal"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:text="@string/subtotal"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/etSubtotalPrecio"
            android:layout_width="206dp"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btAgregarPlato"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:text="@string/agregar_plato" />

        <Button
            android:id="@+id/btConfirmar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmar" />
    </LinearLayout>

</LinearLayout>